force-app/main/default/objects/Doctor_c__c/Doctor_c__c.object-meta.xml
<CustomObject>
    <label>Doctor__c</label>
    <nameField>
        <displayFormat>DOC-{0000}</displayFormat>
        <label>Doctor__c Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>