force-app/main/default/objects/Doctor_c__c/fields/Department_Link__c.field-meta.xml
<CustomField>
    <fullName>Department_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Link</label>
    <referenceTo>Department_c__c</referenceTo>
    <relationshipLabel>Doctors</relationshipLabel>
    <relationshipName>Doctors</relationshipName>
    <type>Lookup</type>
</CustomField>