force-app/main/default/objects/Doctor_c__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <externalId>true</externalId>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>