force-app/main/default/objects/Doctor_c__c/fields/Full_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Full_Credentials__c</fullName>
    <formula>&quot;Dr. &quot; &amp; First_Name__c &amp; &quot; &quot; &amp; Last_Name__c &amp; 
IF(ISBLANK(Specialization__c), &quot;&quot;, 
    &quot; {&quot; &amp; 
    SUBSTITUTE(
        IF(INCLUDES(Specialization__c, &quot;Cardiology&quot;), &quot;Cardiology; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Dermatology&quot;), &quot;Dermatology; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Emergency Medicine&quot;), &quot;Emergency Medicine; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Endocrinology&quot;), &quot;Endocrinology; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Gastroenterology&quot;), &quot;Gastroenterology; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;General Surgery&quot;), &quot;General Surgery; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Geriatrics&quot;), &quot;Geriatrics; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Hematology&quot;), &quot;Hematology; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Infectious Disease&quot;), &quot;Infectious Disease; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Internal Medicine&quot;), &quot;Internal Medicine; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Nephrology&quot;), &quot;Nephrology; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Neurology&quot;), &quot;Neurology; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Obstetrics and Gynecology (OB-GYN)&quot;), &quot;Obstetrics and Gynecology (OB-GYN); &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Oncology&quot;), &quot;Oncology; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Ophthalmology&quot;), &quot;Ophthalmology; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Orthopedics&quot;), &quot;Orthopedics; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Otolaryngology (ENT)&quot;), &quot;Otolaryngology (ENT); &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Pediatrics&quot;), &quot;Pediatrics; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Psychiatry&quot;), &quot;Psychiatry; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Pulmonology&quot;), &quot;Pulmonology; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Radiology&quot;), &quot;Radiology; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Rheumatology&quot;), &quot;Rheumatology; &quot;, &quot;&quot;) &amp;
        IF(INCLUDES(Specialization__c, &quot;Urology&quot;), &quot;Urology; &quot;, &quot;&quot;),
        &quot;; &quot;,
        &quot;&quot;
    ) &amp; &quot;}&quot;
)</formula>
    <label>Full Credentials</label>
    <type>Text</type>
</CustomField>